Some fixex
Text in subtitle fixed, now in single row
Horizontal scroll removed
Modal window buy-now now in the center

--- a/src/sass/components/_ingredients-modal.scss
+++ b/src/sass/components/_ingredients-modal.scss
@@ -15,6 +15,7 @@
 
   max-height: 92%;
   overflow-y: scroll;
+  overflow-x: hidden;
 
   @media screen and (min-width: 768px) {
     width: 568px;
